fixed an issue with <code> blocks not obeying overflow-wrap styling

--- a/src/Preview/Preview.scss
+++ b/src/Preview/Preview.scss
@@ -2,9 +2,14 @@
     width: 40%;
     border: 1px black solid;
     padding: 2rem;
-    overflow-wrap: anywhere;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
 
     & * {
         max-width: 100%;;
+    }
+
+    & code {
+        white-space: normal;
     }
 }
